--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,9 @@ html {
   box-sizing: inherit;
 }
 
+/*-------------------*/
+/* Common background */
+
 html {
   font-family: 'Raleway', sans-serif;
   position: fixed;
@@ -18,6 +21,9 @@ html {
   color: white;
   text-shadow: 2px 2px 10px #000000;
 }
+
+/*-------------------*/
+/* Introduction page */
 
 section#intro {
   padding-top: 200px;
@@ -44,12 +50,24 @@ section#intro {
   display: block;
   padding: 20px 40px;
   margin: 50px auto;
-  background: linear-gradient(rgb(255,68,68), rgb(255,99,99));
+  background: linear-gradient(rgb(255,28,28), rgb(255,59,59));
   color: black;
+  width: 350px;
   font-size: 2em;
 }
 
+#intro button .button-hover {
+  display: none;
+}
+
+#intro button:hover .button-steady {
+  display: none;
+}
+
+#intro button:hover .button-hover {
+  display: inline;
+}
+
 #intro button:hover {
-  background: linear-gradient(rgb(255,28,28), rgb(255,59,59));
   cursor: pointer;
 }
