--- a/styles/main.css
+++ b/styles/main.css
@@ -30,7 +30,7 @@ html {
   width: 800px;
   text-align: center;
   margin: 0 auto;
-  display: none;
+  /*display: none;*/
 }
 
 #intro h1 {
@@ -78,8 +78,8 @@ html {
 /* Quiz */
 
 #quiz {
-  /*display: none;*/
-  padding-top: 50px;
+  display: none;
+  padding-top: 24px;
   width: 600px;
   text-align: center;
   margin: 0 auto;
@@ -87,28 +87,32 @@ html {
 }
 
 #quiz .title {
-  padding: 20px 0 10px 0;
+  /*padding: 20px 0 0 0;*/
   font-family: 'Indie Flower', cursive;
   color: rgb(0,255,92);
   text-transform: uppercase;
-  font-size: 60px;
+  font-size: 80px;
 }
 
 #quiz .stats {
-  width: 410px;
+  width: 490px;
+  height: 32px;
   margin: 0 auto;
+  border-bottom: 2px inset black;
 }
 
 #quiz .question-count {
-   float: left;
+  margin: 0 10px;
+  float: left;
 }
 
 #quiz .score {
+  margin: 0 10px;
   float: right;
 }
 
 #quiz .question {
-  padding: 70px 0 20px 0;
+  padding: 50px 0 20px 0;
   font-size: 36px;
 }
 
