--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@ html {
   box-sizing: inherit;
 }
 
-/*--------*/
+/*================================================*/
 /* Global */
 
 html {
@@ -22,7 +22,7 @@ html {
   text-shadow: 2px 2px 10px #000000;
 }
 
-/*-------------------*/
+/*================================================*/
 /* Introduction page */
 
 #intro {
@@ -45,6 +45,9 @@ html {
   font-size: 100px;
   padding: 20px auto;
 }
+
+/*--------------*/
+/* start button */
 
 #intro button {
   border-radius: 10px;
@@ -74,7 +77,7 @@ html {
   cursor: pointer;
 }
 
-/*------*/
+/*================================================*/
 /* Quiz */
 
 #quiz {
@@ -86,41 +89,36 @@ html {
   font-size: 20px;
 }
 
-#quiz .title {
-  /*padding: 20px 0 0 0;*/
-  font-family: 'Indie Flower', cursive;
-  color: rgb(0,255,92);
-  text-transform: uppercase;
-  font-size: 80px;
-}
+/*---------------*/
+/* status header */
 
-#quiz .stats {
+#quiz .status {
   width: 490px;
   height: 32px;
   margin: 0 auto;
   border-bottom: 2px inset black;
 }
 
-#quiz .question-count {
+#quiz .question-status {
   margin: 0 10px;
   float: left;
 }
 
-#quiz .score {
+#quiz .score-status {
   margin: 0 10px;
   float: right;
 }
+
+/*----------*/
+/* question */
 
 #quiz .question {
   padding: 50px 0 20px 0;
   font-size: 36px;
 }
 
-#quiz .status {
-  position: relative;
-  font-size: 24px;
-  margin: 0 20px 50px 20px;
-}
+/*--------*/
+/* photos */
 
 #quiz .photos img {
   width: 250px;
@@ -140,6 +138,9 @@ html {
   border: solid 5px red !important;
 }
 
+/*---------*/
+/* results */
+
 #quiz .results {
   display: none;
   padding-top: 40px;
@@ -149,7 +150,7 @@ html {
   border-radius: 10px;
   box-shadow: 2px 2px 10px #000000;
   display: block;
-  padding: 10px 40px;
+  height: 40px;
   margin: 20px auto;
   background: linear-gradient(rgb(28,255,119), rgb(169,255,166));
   color: black;
