--- a/styles/main.css
+++ b/styles/main.css
@@ -143,7 +143,10 @@ html {
 
 #quiz .results {
   display: none;
-  padding-top: 40px;
+  padding-top: 24px;
+  width: 520px;
+  margin: 0 auto;
+  line-height: 26px;
 }
 
 #quiz button {
@@ -162,3 +165,49 @@ html {
 #quiz button:hover {
   background: linear-gradient(rgba(28,255,119,.75), rgba(169,255,166,.75));
 }
+
+/*================================================*/
+/* Finish */
+
+#finish {
+  display: none;
+  padding-top: 80px;
+  width: 800px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+#finish h1 {
+  font-family: 'Indie Flower', cursive;
+  color: rgb(0,255,92);
+  text-transform: uppercase;
+  font-size: 100px;
+  padding: 20px auto;
+}
+
+#finish .finish-score {
+  padding: 20px 0;
+  font-size: 50px;
+}
+
+#finish .score-text {
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+#finish button {
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px #000000;
+  display: block;
+  padding: 20px 40px;
+  margin: 50px auto;
+  background: linear-gradient(rgb(28,255,119), rgb(169,255,166));
+  color: black;
+  width: 350px;
+  font-size: 2em;
+}
+
+#finish button:hover {
+  cursor: pointer;
+}
+
