--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,10 @@ html {
   text-shadow: 2px 2px 10px #000000;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 /*================================================*/
 /* Introduction page */
 
@@ -73,10 +77,6 @@ html {
   display: inline;
 }
 
-#intro button:hover {
-  cursor: pointer;
-}
-
 /*================================================*/
 /* Quiz */
 
@@ -123,7 +123,7 @@ html {
 #quiz .photos img {
   width: 250px;
   margin: 5px;
-  border: solid 5px transparent;
+  border: solid 5px rgb(145,145,145);
 }
 
 #quiz img:hover {
